chore: enchanced paragraphs counting

--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -52,7 +52,7 @@
           </div>
           <div class="note-stats-list__item">
             <span class="note-stats-list__item_label">Paragraphs: </span>
-            <span class="note-stats-list__item_value">{{ content.split('\n').length }}</span>
+            <span class="note-stats-list__item_value">{{ countParagraphs() }}</span>
           </div>
           <div class="note-stats-list__item">
             <span class="note-stats-list__item_label">Reading time: </span>
