--- a/src/app/note/note.component.scss
+++ b/src/app/note/note.component.scss
@@ -52,15 +52,18 @@
     display: flex;
     flex-direction: column;
     min-height: calc(100vh - 148px);
-    height: calc(100% - 92px); /* Account for toolbar height + margins */
-    max-width: calc(100% - 32px);
-    margin: 16px;
+    height: calc(100% - 92px);
+    max-height: 841px;
+    max-width: 595px;
+    margin: 16px auto;
     padding: 16px;
     border-radius: 16px;
     background: linear-gradient(145deg, #e0e0e0, #c8c8c8);
     box-shadow: 20px 20px 40px #b4b4b4,
                 -20px -20px 40px #f4f4f4;
     position: relative;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     &:before {
       content: '';
@@ -105,6 +108,8 @@
         font-size: 16px;
         font-weight: 400;
         width: 100%;
+        resize: none;
+        overflow: hidden;
         resize: none;
         overflow-wrap: break-word;
         word-wrap: break-word;
