--- a/src/app/note/note.component.scss
+++ b/src/app/note/note.component.scss
@@ -133,6 +133,16 @@
       width: 100%;
     }
 
+    .note__info {
+      display: flex;
+      gap: 16px;
+      justify-content: flex-start;
+      font-size: 12px;
+      color: #666;
+      margin-top: 8px;
+      padding: 0 4px;
+    }
+
     .note__divider {
       height: 1px;
       width: 100%;
