--- a/src/app/note/note.component.scss
+++ b/src/app/note/note.component.scss
@@ -68,6 +68,7 @@
         backdrop-filter: blur(10px);
         box-shadow: 0 8px 32px rgba(31, 38, 135, 0.15);
         border-radius: 16px;
+        z-index: 100;
       }
 
       .menu__content_button {
