--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,27 +1,25 @@
-<main>
-  <div class="container">
-    <div class="card">
-      <div class="card__title">Register</div>
-      <div class="card__subtitle">Create account in the most useless notes in the world!</div>
-      <div class="card__divider"></div>
-      <div class="card__form">
-        <div class="card__form">
-          <div class="card__form_input">
-            <input type="text" [(ngModel)]="username" placeholder="Username" required />
-          </div>
-          <div class="card__form_input">
-            <input type="email" [(ngModel)]="email" placeholder="Email" required />
-          </div>
-          <div class="card__form_input">
-            <input type="password" [(ngModel)]="password" placeholder="Password" required />
-          </div>
-          <button class="card__form_button" (click)="register()">Register</button>
-          <div class="card__form_error" *ngIf="errorMessage">{{ errorMessage }}</div>
+<main class="register">
+  <div class="register__container">
+    <div class="register__card">
+      <h1 class="register__title">Register</h1>
+      <p class="register__subtitle">Create account in the most useless notes in the world!</p>
+      <div class="register__divider"></div>
+      <form class="register__form">
+        <div class="register__input-wrapper">
+          <input type="text" [(ngModel)]="username" name="username" placeholder="Username" required />
         </div>
-      </div>
+        <div class="register__input-wrapper">
+          <input type="email" [(ngModel)]="email" name="email" placeholder="Email" required />
+        </div>
+        <div class="register__input-wrapper">
+          <input type="password" [(ngModel)]="password" name="password" placeholder="Password" required />
+        </div>
+        <button class="register__submit-btn" (click)="register()">Register</button>
+        <div class="register__error" *ngIf="errorMessage">{{ errorMessage }}</div>
+      </form>
     </div>
-    <div class="card-footer">
-      <a routerLink="/login" class="card-footer__link">Already have an account?</a>
+    <div class="register__footer">
+      <a routerLink="/login" class="register__footer-link">Already have an account?</a>
     </div>
   </div>
 </main>
