--- a/src/app/dashboard/home/home.component.scss
+++ b/src/app/dashboard/home/home.component.scss
@@ -139,6 +139,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box;
+    line-clamp: 8;
     -webkit-line-clamp: 8;
     -webkit-box-orient: vertical;
   }
